fix bug only visible on github pages

--- a/_includes/index.scss
+++ b/_includes/index.scss
@@ -603,7 +603,7 @@ header nav, .logo-box, .header h1 {
 	.img-wrap {
 		margin: 0 -15vw;
 	}
-	.highlight {
+	pre.highlight {
 		margin: .5em -10vw;
 	}
 	
